# learn-rust

introduction-to-rust/: Cargo.toml
introduction-to-rust/src/: generic.rs  main.rs  practice.rs  string.rs  traits.rs  vec.rs
rust-programming-course/: Cargo.toml
rust-programming-course/1 - Flexibility and Abstraction with Generics and Traits/: 2 - Traits.txt  6 - Derived and Marker Traits.txt  7 - Associated Types in Traits.txt  8 - Choosing Associated vs Generic Type.txt  Cargo.toml
rust-programming-course/1 - Flexibility and Abstraction with Generics and Traits/references/: 1 - Generics.txt  3 - Trait bounds.txt  4 - Super Traits.txt  5 - Trait Objects.txt
rust-programming-course/2 - Functional Programming Aspects/: 1 - Closures.txt  3 - Iterators.txt  7 - Iterating Though Option.txt  Cargo.toml
rust-programming-course/2 - Functional Programming Aspects/references/: 4 - IntoIter.txt  (+3 more)
rust-programming-course/3 - Memory Management Features/: 1 - Lifetimes (Part 1).txt  2 - Lifetimes (Part 2).txt  5 - Box Smart Pointer (Part 1).txt  6 - Box Smart Pointer (Part 2).txt  7 - Rc Smart Pointer.txt  8 - Refcell.txt  Cargo.toml
rust-programming-course/4 - Impelmenting Typical Data Structures/: 1 - Singly Link List  (Part 1).txt  3 - Doubly link list (Part 1).txt  Cargo.toml
rust-programming-course/5 - Useful Patterns for Handling Structs/: 3 - Simplifying Sturcts.txt  Cargo.toml
rust-programming-course/my_package/: Cargo.toml  run.sh
rust-programming-course/src/: lib.rs  main.rs
use_rust_bitcoin/: .env.sample  Cargo.toml
use_rust_bitcoin/src/: main.rs
(+19 files in other folders)
